# kbxyfywd

./: AGENTS.md  CMakeLists.txt  README.md  data_interceptor.cpp  demo.cpp  packet_parser.cpp  ui_bridge.cpp  ui_bridge.h  wpe_hook.cpp
docs/: act666-kongkong-analysis.md  act805-guardian-dream-analysis.md  business-layer-optimization-spec.md  refactor-checklist.md  refactor-progress.md  task-automation-analysis-guide.md  task-automation-mainline-2001000-huangcheng-weiji.md  task-automation-series-batch-01.md  task-automation-series-full-catalog.md
embedded/: ui_html.h
include/activities/: activity_minigames.h  battle_six.h  dungeon_jump.h  horse_competition.h  shuangtai.h  spirit_collect.h
include/core/: app_host.h
include/hook/: wpe_hook.h
include/internal/: activity_states_internal.h  shuangtai_internal.h  wpe_hook_internal.h
include/protocol/: packet_protocol.h  packet_types.h
resources/: app.rc  ui.html
src/app/: app_host.cpp  demo.cpp
src/core/: web_message_handler.cpp
src/hook/: horse_competition.cpp  wpe_hook.cpp
src/protocol/: packet_parser.cpp
